Use allowedOriginPatterns(*) to remove CORS origin restriction
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>